--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Christopher Rife's Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="portfolio.css">
-	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-	<script type="text/javascript" src="portfolio.js"></script>
+	<link rel="stylesheet" type="text/css" href="./css/portfolio.css">
+	<script type="text/javascript" src="./javascript/portfolio.js"></script>
 </head>
 <body>
 	<!-- Navigation section -->
@@ -23,7 +22,7 @@
 			<a class="resumeButton headerStyle" href="ChristopherResume.pdf" download>Download Resume</a>
 		</div>
 		<div class="columnTwo smallColumnTwo">
-			<img class="portfolioPhoto" src="portfolio_photo.jpg">
+			<img class="portfolioPhoto" src="./images/portfolio_photo.jpg">
 		</div>
 	</div> 
 	<!-- Home content section -->
@@ -169,9 +168,8 @@
 		<p>ct_rife@yahoo.com<p>
 		<br>
 		<a href="https://www.linkedin.com/in/christopher-rife-1a0323aa/" target="_blank">
-			<img src="linkedIn.png" style="border-radius:5px;">
+			<img src="./images/linkedIn.png" style="border-radius:5px;">
 		</a>
 	</div>
 </body>
-
 </html> 
